Allows width height and name to be passed, changed example name

--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -135,7 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Sandbox.cpp" />
+    <ClCompile Include="ExampleGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Karakuri.Windows\Karakuri.Windows.vcxproj">
