made changes to graphics made a start on colours

--- a/Karakuri.Windows/Karakuri.Windows.vcxproj.filters
+++ b/Karakuri.Windows/Karakuri.Windows.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="src\Graphics\Graphics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphics\Colours.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Game.cpp">
