--- a/Karakuri.Windows/Karakuri.Windows.vcxproj
+++ b/Karakuri.Windows/Karakuri.Windows.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="src\Core\Game.h" />
     <ClInclude Include="src\Core\SystemIncludes.h" />
     <ClInclude Include="src\Core\Timer.h" />
+    <ClInclude Include="src\Graphics\Colours.h" />
     <ClInclude Include="src\Graphics\Graphics.h" />
   </ItemGroup>
   <ItemGroup>
