Added image loader

--- a/Karakuri.Windows/Karakuri.Windows.vcxproj
+++ b/Karakuri.Windows/Karakuri.Windows.vcxproj
@@ -141,10 +141,12 @@
     <ClInclude Include="src\Core\Timer.h" />
     <ClInclude Include="src\Graphics\Colours.h" />
     <ClInclude Include="src\Graphics\Graphics.h" />
+    <ClInclude Include="src\Graphics\WICTextureLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Game.cpp" />
     <ClCompile Include="src\Graphics\Graphics.cpp" />
+    <ClCompile Include="src\Graphics\WICTextureLoader.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
