drew a textured quad

--- a/Sandbox/Sandbox.vcxproj.filters
+++ b/Sandbox/Sandbox.vcxproj.filters
@@ -22,5 +22,7 @@
   <ItemGroup>
     <FxCompile Include="PixelShader.hlsl" />
     <FxCompile Include="VertexShader.hlsl" />
+    <FxCompile Include="VertexTextureShader.hlsl" />
+    <FxCompile Include="PixelTextureShader.hlsl" />
   </ItemGroup>
 </Project>
