--- a/Karakuri.Windows/Karakuri.Windows.vcxproj
+++ b/Karakuri.Windows/Karakuri.Windows.vcxproj
@@ -139,7 +139,7 @@
     <ClInclude Include="src\Core\Game.h" />
     <ClInclude Include="src\Core\SystemIncludes.h" />
     <ClInclude Include="src\Core\Timer.h" />
-    <ClInclude Include="src\Graphics\Colours.h" />
+    <ClInclude Include="src\Graphics\Colors.h" />
     <ClInclude Include="src\Graphics\Graphics.h" />
     <ClInclude Include="src\Graphics\Resources\Bindable.h" />
     <ClInclude Include="src\Graphics\Resources\IndexBuffer.h" />
