--- a/Karakuri.Windows/Karakuri.Windows.vcxproj.filters
+++ b/Karakuri.Windows/Karakuri.Windows.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClInclude Include="src\Graphics\Graphics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Graphics\Colours.h">
+    <ClInclude Include="src\Graphics\Colors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Graphics\WICTextureLoader.h">
