--- a/Karakuri.Windows/Karakuri.Windows.vcxproj.filters
+++ b/Karakuri.Windows/Karakuri.Windows.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClInclude Include="src\Maths\SimpleMath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphics\SpriteRenderer\SpriteRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\Resources\ConstantBuffers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Core\Game.cpp">
@@ -110,10 +116,17 @@
     <ClCompile Include="src\Maths\SimpleMath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Graphics\SpriteRenderer\SpriteRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Maths\SimpleMath.inl">
       <Filter>Header Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="src\Graphics\SpriteRenderer\PixelRendererVertexShader.hlsl" />
+    <FxCompile Include="src\Graphics\SpriteRenderer\SpriteRendererPixelShader.hlsl" />
   </ItemGroup>
 </Project>
